--- a/vite-react-app/src/pages/Purchases/AddPurchaseDialog.css
+++ b/vite-react-app/src/pages/Purchases/AddPurchaseDialog.css
@@ -13,7 +13,10 @@
 
 }
 
-
+.purchase-dialog-metadata{
+  padding: 1rem;
+  border-radius: 16px;
+}
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
