--- a/frontend/src/components/Invoice/Invoice.css
+++ b/frontend/src/components/Invoice/Invoice.css
@@ -1,113 +1,230 @@
 .invoice-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-family: "Courier New", monospace;
+  justify-content: center;
 }
 
 .thermal-invoice {
   width: 80mm;
-  background: white;
-  padding: 6px;
-  font-size: 11px;
-  color: black;
+  padding: 6px 6px;
+  background: #fafafa;
   border: 1px solid #ccc;
+  font-size: 11px;
+  color: #000;
+  line-height: 1.15;
+  letter-spacing: 0.2px;
 }
 
 .shop-name {
   text-align: center;
   font-size: 15px;
   font-weight: bold;
+  margin: 2px 0;
 }
 
 .shop-address {
   text-align: center;
   font-size: 10px;
-  line-height: 1.2;
+  margin-bottom: 7px;
+  white-space: pre-line;
+}
+
+.shop-contact {
+  text-align: center;
+  font-size: 10px;
+  margin-bottom: 2px;
+  white-space: pre-line;
+}
+
+.shop-gst {
+  text-align: center;
+  font-size: 11px;
+  margin-bottom: 5px;
 }
 
 .invoice-title {
   text-align: center;
-  border-top: 1px dashed black;
-  border-bottom: 1px dashed black;
+  font-weight: bold;
   padding: 3px 0;
   margin: 6px 0;
-  font-weight: bold;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
 }
 
-.invoice-info {
-  font-size: 10.5px;
-  line-height: 1.3;
-  margin-bottom: 6px;
+.date-format-row {
+  align-items: end;
+}
+
+.invoice-row {
+  display: grid;
+  grid-template-columns: 120px 1fr auto;
+  font-size: 11.5px;
+  /* margin-bottom: 1px; */
+  align-items: center;
+}
+
+.invoice-no {
+  text-align: left;
+  margin-top: -8px;
+}
+
+.invoice-date {
+  text-align: right;
+  display: block;
+  width: 75px;
+  margin-top: -8px;
+}
+
+.customer-row {
+  display: flex;
+  font-size: 11.5px;
+  margin-top: -4px;
+}
+
+.label {
+  font-weight: normal;
 }
 
 .bill-table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 5px;
+  font-size: 11px;
+  margin-top: 6px;
 }
 
-.bill-table th,
+.main-header th {
+  border-bottom: 1px solid #000;
+  padding-bottom: 2px;
+  font-weight: 400;
+}
+
+.sub-header th {
+  padding-top: 1px;
+  padding-bottom: 3px;
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.table-row-1 {
+  font-weight: 700;
+}
+
 .bill-table td {
-  text-align: left;
-  padding: 2px;
-  border-bottom: 1px dashed #ccc;
+  padding: 3px 0;
+}
+
+.bill-table th:nth-child(1),
+.bill-table td:nth-child(1) {
+  width: 1%;
+}
+
+.bill-table th:nth-child(2),
+.bill-table td:nth-child(2) {
+  width: 22%;
+}
+
+.bill-table th:nth-child(3),
+.bill-table td:nth-child(3),
+.bill-table th:nth-child(4),
+.bill-table td:nth-child(4),
+.bill-table th:nth-child(5),
+.bill-table td:nth-child(5) {
+  width: 17%;
+  text-align: right;
 }
 
 .sub-row td {
   font-size: 10px;
-  border-bottom: 1px dashed #ccc;
+  padding: 1px 0 2px 0;
 }
 
-.total-section {
-  border-top: 1px dashed black;
+.post-table-summary {
   font-size: 11px;
-  margin-top: 5px;
-  padding-top: 5px;
+  margin-top: 6px;
+}
+
+.summary-line {
+  margin: 6px 0;
+}
+
+.total-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 0;
+}
+
+.roundoff-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 0;
+  font-size: 10.5px;
+}
+
+.final-row {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  padding-top: 4px;
+  border-top: 1px solid #000;
 }
 
 .in-words {
-  margin-top: 4px;
-  font-size: 10px;
-  font-style: italic;
+  margin-top: 6px;
+  font-size: 11px;
+  font-weight: 500;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  padding: 3px 0 3px 0;
 }
 
 .gst-summary {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 5px;
-  font-size: 10.5px;
+  font-size: 11px;
+  margin-top: 6px;
 }
 
-.gst-summary th,
+.gst-summary th {
+  border-bottom: 1px solid #000;
+  padding-bottom: 2px;
+}
+
 .gst-summary td {
-  padding: 2px;
-  border-bottom: 1px dashed #ccc;
+  padding: 3px 0;
+  text-align: right;
+}
+
+.gst-summary th:first-child,
+.gst-summary td:first-child {
   text-align: left;
 }
 
 .summary {
-  margin-top: 5px;
-  border-top: 1px dashed #000;
-  padding-top: 5px;
   font-size: 11px;
 }
 
+.summary p {
+  display: flex;
+  margin: 3px 0;
+  white-space: inherit;
+}
+
 .footer {
+  margin-top: 8px;
+  padding-top: 6px;
   text-align: center;
-  border-top: 1px dashed black;
-  margin-top: 6px;
-  padding-top: 4px;
+  font-size: 15px;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
   font-weight: bold;
 }
 
 .invoice-download-btn {
-  margin-top: 12px;
-  background: black;
-  color: white;
-  border: none;
-  padding: 6px 10px;
-  cursor: pointer;
-  border-radius: 4px;
+  margin-top: 10px;
+  background: #000;
+  color: #fff;
+  padding: 6px 12px;
   font-size: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
