--- a/frontend/src/pages/Customers/CustomerPage.css
+++ b/frontend/src/pages/Customers/CustomerPage.css
@@ -4,10 +4,10 @@
   font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif';
   border: 0.01rem solid black;
   border-radius: 2rem;
-  /* width: 84vw; */
+  /* width: 80vw; */
   overflow: hidden;
   min-height: 600px;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   padding: 35px;
 }
 
@@ -126,7 +126,7 @@
   background: white;
   border: 0.5px solid rgb(207, 202, 202);
   border-radius: 0.75rem;
-  overflow: hidden;
+  overflow: scroll;
   font-size: medium;
 }
 
@@ -176,11 +176,7 @@
 }
 
 @media (max-width: 768px) {
-  .customer-page {
-    width: 95vw;
-    padding: 1rem;
-  }
-  
+
   .customer-controls {
     flex-direction: column;
     align-items: flex-start;
