--- a/frontend/src/pages/Products/ProductsList.css
+++ b/frontend/src/pages/Products/ProductsList.css
@@ -172,12 +172,27 @@
     flex-direction: column;
     align-items: stretch;
   }
-
-  .search-form {
-    width: 100%;
+  .search-form{
+    display: grid;
+    width:100%;
+  }
+  .search-form input{
+    /* width: 100%; */
+    max-height: fit-content;
+    margin-right: 10px;
+    width:68%;
+    border-radius: 12px 12px 12px 12px ;
+  }
+  .search-form button{
+    max-height: 40px;
+    margin-right: 10px;
+    width:68%;
+    border-radius: 12px 12px 12px 12px ;
+margin-top: -100px;
   }
 
   .reset-btn {
+  margin-top: -170px;
     width: 100%;
     text-align: center;
   }
